# Tiny-software-render

./: README.md
base/: CMakeLists.txt  animation.cpp  animation.h  cameral.cpp  cameral.h  geometry.cpp  geometry.h  light.cpp  light.h  line.cpp  line.h  model.cpp  model.h  shader.cpp  shader.h  tgaimage.cpp  tgaimage.h
base/vmath/: CMakeLists.txt  Matrix.cpp  Matrix.h  Point.cpp  Point.h  Transform.cpp  Transform.h  Vector.cpp  Vector.h  quaternion.cpp  quaternion.h
windows/: CMakeLists.txt  main.cpp  window.h  window_control.cpp  window_paint.cpp
